<resources>
    <string name="app_name">My Game</string>

    <string name="rank_title">RANK</string>
    <string name="name_title">NAME</string>
    <string name="score_title">SCORE</string>
    <string name="life_title">LIFE</string>
    <string name="settings_title">SETTINGS</string>
    <string name="time_title">TIME</string>
    <string name="rank_index">1</string>


    <string name="add_point">+1</string>
    <string name="take_point">-1</string>

    <string name="add_life">+♥</string>
    <string name="take_life">-♥</string>

    <string name="reset">RESET</string>
    <string name="pause">PAUSE</string>
    <string name="start">START</string>

    <string name="sound_effects">SOUND EFFECTS</string>
    <string name="background_sound">BACKGROUND SOUND</string>
    <string name="background_color">BACKGROUND COLOR</string>

    <string name="name_dummy">TEST TEST</string>
    <string name="score_dummy">498</string>
    <string name="send_database">SAVE</string>
    <string name="title_game_list">Games</string>
    <string name="title_game_detail">Game Detail</string>

    <string name="detail_flow">Detail</string>

</resources>
