<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.GameFragment">

    <TextView
        android:id="@+id/lifeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/life_title"
        android:textColor="@color/superMarioWhite"
        app:layout_constraintEnd_toStartOf="@+id/scoreTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/life1"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:src="@drawable/red_heart"
        app:layout_constraintEnd_toStartOf="@+id/life2"
        app:layout_constraintStart_toStartOf="@+id/lifeTitle"
        app:layout_constraintTop_toTopOf="@+id/life2" />

    <ImageView
        android:id="@+id/life2"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:src="@drawable/red_heart"
        app:layout_constraintEnd_toEndOf="@+id/lifeTitle"
        app:layout_constraintStart_toStartOf="@+id/lifeTitle"
        app:layout_constraintTop_toBottomOf="@+id/lifeTitle" />

    <ImageView
        android:id="@+id/life3"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:src="@drawable/red_heart"
        app:layout_constraintEnd_toEndOf="@+id/lifeTitle"
        app:layout_constraintStart_toEndOf="@+id/life2"
        app:layout_constraintTop_toTopOf="@+id/life2" />

    <TextView
        android:id="@+id/scoreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/score_title"
        android:textColor="@color/superMarioWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yourScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_dummy"
        android:textColor="@color/superMarioGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreTitle" />

    <TextView
        android:id="@+id/timeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/time_title"
        android:textColor="@color/superMarioWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scoreTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/superMarioYellow"
        app:layout_constraintEnd_toEndOf="@+id/timeTitle"
        app:layout_constraintStart_toStartOf="@+id/timeTitle"
        app:layout_constraintTop_toBottomOf="@+id/timeTitle" />


    <Button
        android:id="@+id/addLife"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@color/superMarioGreen"
        android:text="@string/add_life"
        android:textColor="@color/superMarioRed"
        app:layout_constraintEnd_toEndOf="@+id/lifeTitle"
        app:layout_constraintStart_toStartOf="@+id/lifeTitle"
        app:layout_constraintTop_toBottomOf="@+id/life2" />

    <Button
        android:id="@+id/takeLife"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/superMarioYellow"
        android:text="@string/take_life"
        android:textColor="@color/superMarioRed"
        app:layout_constraintEnd_toEndOf="@+id/addLife"
        app:layout_constraintStart_toStartOf="@+id/addLife"
        app:layout_constraintTop_toBottomOf="@+id/addLife" />


    <Button
        android:id="@+id/addPoint"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@color/superMarioGreen"
        android:text="@string/add_point"
        android:textColor="@color/superMarioRed"
        app:layout_constraintEnd_toEndOf="@+id/scoreTitle"
        app:layout_constraintStart_toStartOf="@+id/scoreTitle"
        app:layout_constraintTop_toBottomOf="@+id/yourScore" />

    <Button
        android:id="@+id/takePoint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/superMarioYellow"
        android:text="@string/take_point"
        android:textColor="@color/superMarioRed"
        app:layout_constraintEnd_toEndOf="@+id/addPoint"
        app:layout_constraintStart_toStartOf="@+id/addPoint"
        app:layout_constraintTop_toBottomOf="@+id/addPoint" />

    <Button
        android:id="@+id/resetTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@color/superMarioBlue"
        android:text="@string/reset_time"
        android:textColor="@color/superMarioRed"
        app:layout_constraintEnd_toEndOf="@+id/time"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/time"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <Button
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:background="@color/pacmanBlueLight"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/send_database"
        android:textColor="@color/pacmanYellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/yourName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toEndOf="@+id/save"
        app:layout_constraintStart_toStartOf="@+id/save">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_title" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>