<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/superMarioYellow"
    tools:context=".activities.SettingActivity">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_64dp"
        android:text="SETTINGS"
        android:textColor="@color/superMarioBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/soundEffects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_128dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/sound_effects"
        android:textColor="@color/superMarioBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTitle" />

    <Switch
        android:id="@+id/backgroundSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_64dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/background_sound"
        android:textColor="@color/superMarioRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/soundEffects"
        app:layout_constraintTop_toBottomOf="@+id/soundEffects" />

    <Switch
        android:id="@+id/backgroundColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_64dp"
        android:text="@string/background_color"
        android:gravity="center"
        android:foregroundGravity="center"
        android:textColor="@color/superMarioGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/backgroundSound"
        app:layout_constraintTop_toBottomOf="@+id/backgroundSound" />

</androidx.constraintlayout.widget.ConstraintLayout>